minor formatting for style.css

--- a/02-Homework/Develop/style.css
+++ b/02-Homework/Develop/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -21,7 +21,7 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+.description {
   white-space: pre-wrap;
 }
 
@@ -57,7 +57,7 @@ textarea{
   color: white;
 }
 
-.saveBtn {
+.save-btn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -65,7 +65,7 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
+.save-btn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
