--- a/02-Homework/Develop/style.css
+++ b/02-Homework/Develop/style.css
@@ -8,9 +8,9 @@ textarea {
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
+  color: white;
   border-left: 1px solid black;
-  padding: 10px;
+  padding: 30px;
 }
 
 .jumbotron {
